[package]
name = "redis-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.21.5"
console = "0.15.0"
indicatif = "0.16.2"
clap = { version = "3.0.13", features = ["derive"] }
csv = "1.1"

[profile.release]
strip = true

